libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__bound_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Bound with whitespace
expression: "< T : Comparable >"
info:
  kind: Ok
---
Generics#4294967040@6
  GenericParam#4294967040@5 (name: T)
    Type#4294967040@4
      TypeKind (Path)
        Path#4294967040@4 (rooted: false)
          PathSegment#4294967040@3 (name: Comparable)
