libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_camel_case_ident.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Camel case identifier
expression: CamelCase
info:
  kind: Err
---
CamelCase
         ^
invalid generic constraint
