libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_extra_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Extra whitespace throughout
expression: "T  :  Int "
info:
  kind: Ok
---
GenericConstraint#4294967040@5 (name: T)
  Type#4294967040@4
    TypeKind (Path)
      Path#4294967040@4 (rooted: false)
        PathSegment#4294967040@3 (name: Int)
