libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_invalid_bound_syntax.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Missing colon between ident and bound
expression: T Int
info:
  kind: Err
---
T Int
  ^
invalid generic constraint
