libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_invalid_ident.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: Invalid identifier
expression: "123"
info:
  kind: Err
---
123
^
invalid identifier
