libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__generic__tests__constraint_no_bound_specified.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/generic.rs
description: No bound specified after colon
expression: "T:"
info:
  kind: Err
---
T:
  ^
invalid type
expected type
